--- a/frontend html & css/css/movie-item.css
+++ b/frontend html & css/css/movie-item.css
@@ -1,51 +1,3 @@
-.main-container
-{
-    background-color: #17181b; /* color overlay */
-    width: 720px;
-    height: 1280px;
-    position: absolute;
-}
-
-.header-container
-{
-    background-color: #17181b; /* color overlay */
-    width: 100%;
-    height: 100px;
-    -webkit-box-shadow: 0px 6px 8px -4px rgba(0, 0, 0, .9);
-
-}
-
-.popcorn-logo
-{
-    position: relative;
-    float: left;
-    margin-left: 41px;
-    margin-top: 35px;
-    width: 182px;
-    height: 42px;
-    background-image: url('../assets/LOGO.png');
-}
-
-.popcorn-menu-icon
-{
-    position: relative;
-    margin-right: 27px;
-    margin-top: 27px;
-    width: 56px;
-    height: 48px;
-    float: right;
-    background-image: url('../assets/MENU%20ICON.png');
-}
-.popcorn-search-icon
-{
-    position: relative;
-    margin-right: 91px;
-    margin-top: 27px;
-    width: 50px;
-    height: 49px;
-    float: right;
-    background-image: url('../assets/SEARCH%20ICON.png');
-}
 
 .popcorn-movie-item
 {
@@ -82,6 +34,7 @@ width: auto;
 .popcorn-movie-open-icon {
     position:relative;
     float: right;
+    cursor: pointer;
     width: 0;
     height: 0;
     border-top: 30px solid transparent;
