--- a/frontend html & css/css/header.css
+++ b/frontend html & css/css/header.css
@@ -11,6 +11,7 @@
 .popcorn-logo
 {
     position: relative;
+    background-repeat: no-repeat;
     float: left;
     margin-left: 41px;
     margin-top: 35px;
@@ -27,6 +28,7 @@
     width: 56px;
     height: 48px;
     float: right;
+    background-repeat: no-repeat;
     cursor: pointer;
     background-image: url('../assets/MENU%20ICON.png');
 }
@@ -36,6 +38,7 @@
     margin-right: 91px;
     margin-top: 27px;
     width: 50px;
+    background-repeat: no-repeat;
     height: 49px;
     float: right;
     cursor: pointer;
