--- a/frontend html & css/css/movie-detail.css
+++ b/frontend html & css/css/movie-detail.css
@@ -1,7 +1,59 @@
-
 .popcorn-movie-detail
 {
     position: absolute;
     width: 100%;
     height: calc(100% - 100px);
+}
+
+.popcorn-movie-detail-title
+{
+position: relative;
+margin-left: 40px;
+margin-top: 30px;
+color: #fff; /* text color */
+font-family: 'Roboto', sans-serif;
+font-size: 36px;
+font-weight: 400;
+width: auto;
+float: none;
+}
+
+.popcorn-movie-detail-meta
+{
+margin-left: 20px;
+margin-top: 10px;
+color: #5b5b5b; /* text color */
+font-family: 'Roboto', sans-serif;
+font-size: 24px;
+font-weight: 400;
+width: auto;
+float: left;
+}
+
+.popcorn-movie-detail-star-container
+{
+    margin-top: 10px;
+    margin-left: 40px;
+    height: 27px;
+    width: auto;
+    float: left;
+}
+
+.popcorn-movie-detail-star
+{
+margin-right: 5px;
+width: 29px;
+height: 27px;
+float: left;
+position: relative;
+background-repeat: no-repeat;
+
+}
+.popcorn-movie-detail-star.gold
+{
+background-image: url('../assets/star-gold.png')
+}
+.popcorn-movie-detail-star.gray
+{
+background-image: url('../assets/star-gray.png')
 }
