--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -10,8 +10,8 @@
         margin-top: HeaderHeight
 
     .movies
-        padding-top: HeaderHeight
-        -webkit-user-select: none;
+        padding-top: 70px
+        -webkit-user-select: none
         text-align: left
         display: inline-block
 
