--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -51,6 +51,8 @@
 		background rgba(0, 0, 0, 0.67)
 		padding 8px 2px 0
 		margin-top -45px
+		width 134px
+		cursor pointer
 
 		.title
 			height 14px;
