--- a/frontend html & css/css/main.css
+++ b/frontend html & css/css/main.css
@@ -1,7 +1,7 @@
 .main-container {
     background-color: #17181b;
     /* color overlay */
-    width: 720px;
+    width: 100%;
     height: 1280px;
     position: absolute;
 }
