--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -138,3 +138,7 @@
 
         &:focus::-webkit-input-placeholder
             color: #c4c6c8;
+    
+    .icon_menu
+        width 36px
+        margin 0 10px
