work on home style some more

--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -10,9 +10,10 @@
         margin-top: HeaderHeight
 
     .movies
-        padding-top: 70px
+        padding-top: 100px
         -webkit-user-select: none
         text-align: left
+        width: 100%
         display: inline-block
 
     .error
