--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -8,8 +8,7 @@
 
 .filter-bar
     position: absolute
-    top: TitleHeight
-    height: FilterBarHeight
+    height: 100px
     box-shadow: 0px 6px 8px -4px rgba(0, 0, 0, .9);
 
     .source
