--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -1,4 +1,36 @@
 .movie-item
+    position: relative
+    width: 100%
+    height: 130px
+    border-bottom: 1px solid rgba(0, 0, 0, .9)
+
+.title
+    color: #fff
+    font-family: 'Roboto', sans-serif
+    font-size: 36px
+    font-weight: 400
+    margin-left: 40px
+    position: absolute
+    margin-top: 3%
+    width: auto
+
+
+.year
+	font-size: 24px
+	color #5b5b5b
+	margin-left: 40px
+	margin-top: 7.5%
+	position: absolute
+
+
+.seasons
+	font-size 0.85em
+	color #5b5b5b
+	display inline
+	float right
+
+/*
+.movie-item
 	display inline-block;
 	margin 0.5px
 	float left
@@ -73,7 +105,7 @@
 			color #5b5b5b
 			display inline
 			float right
-
+*/
 .key-nav .movie-item.selected .cover .cover-overlay
 	border 2px solid #2d75df
 	opacity 1
