work on header some more

--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -7,7 +7,7 @@
     scrollable()
 
     &::-webkit-scrollbar-track
-        margin-top: HeaderHeight
+        margin-top: 100px
 
     .movies
         padding-top: 100px
