--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -141,3 +141,37 @@
     .icon_menu
         width 36px
         margin 0 10px
+
+
+.popcorn-logo
+  position relative
+  background-repeat no-repeat
+  float left
+  margin-left 41px
+  margin-top 35px
+  width 182px
+  height 42px
+  background-image url('../images/LOGO.png')
+
+.popcorn-menu-icon
+  position relative
+  margin-right 27px
+  margin-top 27px
+  width 56px
+  height 48px
+  float right
+  background-repeat no-repeat
+  cursor pointer
+  background-image url('../images/MENUICON.png')
+
+.popcorn-search-icon
+  position relative
+  margin-right 91px
+  margin-top 27px
+  width 50px
+  background-repeat no-repeat
+  height 49px
+  float right
+  cursor pointer
+  background-image url('../images/SEARCHICON.png')
+
