more movie list styling

--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -29,6 +29,32 @@
 	display inline
 	float right
 
+.popcorn-movie-open-icon
+  position relative
+  float right
+  cursor pointer
+  width 0
+  height 0
+  border-top 30px solid transparent
+  border-bottom 30px solid transparent
+  border-left 46px solid #2d75df
+  margin-right 37px
+  margin-top 40px
+  &:hover
+    border-left 46px solid rgb(54, 133, 245)
+
+.popcorn-movie-seperator
+  width 1px
+  height 80%
+  float right
+  margin-top 15px
+  position relative
+  margin-right 30px
+  background-color #000
+
+
+
+
 /*
 .movie-item
 	display inline-block;
