--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -89,9 +89,10 @@
     .detail-window
       opacity 1
 
-	    .movie-quick-info
-	    	margin-bottom: 5px
-	    	color: #fff
+.movie-quick-info
+  margin-bottom: 5px
+  color: #fff
+  margin-left: 3%
 
   .movie-meta-details
     opacity 1
@@ -159,7 +160,7 @@
 
 .movie-meta-overview
     position relative
-    margin-left 285px
+    margin-left 3%
     margin-top 45px
     color #fff
     font-family 'Open Sans Semibold'
@@ -193,7 +194,7 @@
 
 .movie-meta-title
     margin-top 5.5%
-    margin-left 285px
+    margin-left 3%
     color #fff
     font-family: 'Open Sans Semibold'
     -webkit-font-smoothing: antialiased;
