movie detail work
Screw the mockup!

--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -251,12 +251,12 @@
   position: relative
 
 .movie-controlls-container
-  margin-left: 31%
-  top: 72%
+  margin-left: 3%
+  margin-top: 10%
   z-index: 2
   width: 70%
   height: 10px
-  position: absolute
+  position: relative
 
 
 
