--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -147,10 +147,10 @@
   position relative
   background-repeat no-repeat
   float left
-  margin-left 41px
-  margin-top 35px
-  width 182px
-  height 42px
+  margin-left 4%
+  margin-top 4%
+  width 27%
+  height 42%
   background-image url('../images/LOGO.png')
 
 .popcorn-menu-icon
