Some work on home page styling & start changing to %

--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -7,19 +7,19 @@
 .title
     color: #fff
     font-family: 'Roboto', sans-serif
-    font-size: 36px
+    font-size: 150%
     font-weight: 400
     margin-left: 40px
     position: absolute
-    margin-top: 3%
+    margin-top: 6%
     width: auto
 
 
 .year
-	font-size: 24px
+	font-size: 110%
 	color #5b5b5b
 	margin-left: 40px
-	margin-top: 7.5%
+	margin-top: 16%
 	position: absolute
 
 
