more work on main view / add menu swing

--- a/frontend/www/styl/menu.styl
+++ b/frontend/www/styl/menu.styl
@@ -6,11 +6,11 @@
 	transition all 0.3ssss
 	display none
 
-.menu
+.menu-andriod
 	z-index 10
 	height 100%
 	position fixed
-	background #17181B
+	background-color #17181B
 	right -270px
 	width 270px
 	overflow auto
