--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -1,7 +1,7 @@
 .movie-item
     position: relative
     width: 100%
-    height: 130px
+    height: 18%
     border-bottom: 1px solid rgba(0, 0, 0, .9)
 
 .title
@@ -39,7 +39,7 @@
   border-bottom 30px solid transparent
   border-left 46px solid #2d75df
   margin-right 37px
-  margin-top 40px
+  margin-top 6%
   &:hover
     border-left 46px solid rgb(54, 133, 245)
 
