Truncate long titles.

--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -9,16 +9,19 @@
     font-family: 'Roboto', sans-serif
     font-size: 150%
     font-weight: 400
-    margin-left: 40px
+    margin-left: 5%
     position: absolute
     margin-top: 6%
-    width: auto
+    width: 60%
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
 
 
 .year
 	font-size: 110%
 	color #5b5b5b
-	margin-left: 40px
+	margin-left: 5%
 	margin-top: 16%
 	position: absolute
 
@@ -32,16 +35,8 @@
 .popcorn-movie-open-icon
   position relative
   float right
-  cursor pointer
-  width 0
-  height 0
-  border-top 30px solid transparent
-  border-bottom 30px solid transparent
-  border-left 46px solid #2d75df
   margin-right 37px
   margin-top 6%
-  &:hover
-    border-left 46px solid rgb(54, 133, 245)
 
 .popcorn-movie-seperator
   width 1px
