--- a/frontend-html/css/settings.css
+++ b/frontend-html/css/settings.css
@@ -60,8 +60,8 @@
     font: 15px/25px "Open Sans", sans-serif;
     height: 29px;
     outline: 0;
-    padding-left: 1.5%;
-    width: 98.5%;
+    padding-left: 2%;
+    width: 98%;
 }
 
 .content input[type=checkbox] {
@@ -105,8 +105,11 @@
 }
 
 .content button {
+    transition: background-color .5s;
+
     background: #2d75df;
     border: none;
+    border-radius: 3px;
     color: #c3c5c7;
     cursor: pointer;
     float: left;
@@ -115,7 +118,6 @@
     margin: 1% 2.5%;
     padding: 0 10px;
     width: 45%;
-    /*transition background-color .5s        */
 }
 
 .content button:hover {
