Started implantation of new header

--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -146,10 +146,13 @@
 .popcorn-logo
     position relative
     float left
-    width 60%
+    width 186px
+    height 42px
     max-width: 300px;
     margin-top: 8%
     margin-left: 4%;
+    background-image url("../images/LOGO.png")
+    background-repeat: no-repeat
 
 
 .popcorn-menu-icon
