--- a/frontend/www/styl/menu.styl
+++ b/frontend/www/styl/menu.styl
@@ -1,85 +1,109 @@
 .menu-overlay
-	position absolute
-	background rgba(0, 0, 0, 0.3)
-	width 100%
-	height 100%
-	transition all 0.3ssss
-	display none
+	position: absolute;
+	background: rgba(0, 0, 0, 0.3);
+	width: 100%;
+	height: 100%;
+	transition: all 0.3s;
+	display: none;
 
-.menu-andriod
-	z-index 10
-	height 100%
-	position fixed
-	background-color #17181B
-	right -270px
-	width 270px
-	overflow auto
-	top 0
-	box-shadow 6px 0px 14px 6px #000
-	.menu-base
-		list-style none
-		color #FFF
-		font-family 'Roboto', sans-serif
-		font-size 30px
-		font-weight 400
-		margin 10px 0
-		& > li
-			border-left 5px solid rgba(0, 0, 0, 0)
-			padding 15px 10px
-			transition all 0.3s
-			&:hover
-				border-left 5px solid rgba(55, 73, 207, 0.3)
-			&.selected
-				border-left 5px solid #3749CF
-				transition all 0.3s
 
-.menu-base li, .sub-menu li, .sub-menu div
-	cursor pointer
+.menu 
+	z-index: 10;
+	height: 100%;
+	position: fixed;
+	background: #17181B;
+	right: -270px;
+	width: 270px;
+	overflow: auto;
+	top: 0;
+	box-shadow: 6px 0px 14px 6px #000;
 
-.sub-menu
-	z-index 11
-	height 100%
-	position fixed
-	background #0C0C0C
-	right -230px
-	width 230px
-	overflow auto
-	top 0
-	box-shadow 6px 0px 14px 6px #000
-	div
-		padding 10px
-		transition all 0.3s
-		list-style none
-		color #FFF
-		font-family 'Roboto', sans-serif
-		font-size 24px
-		font-weight 400
-		margin 0
-		background rgba(0, 0, 0, 0.98)
-		box-shadow 1px 1px 5px rgba(0, 0, 0, 0.95)
-		position fixed
-		width 100%
 
-.menu-genre
-	padding 10px 30px
-	border-left 5px solid rgba(0, 0, 0, 0)
-	transition all 0.3s
-	list-style none
-	color #FFF
-	font-family 'Roboto', sans-serif
-	font-size 24px
-	font-weight 400
-	margin 45px 0 10px 0
-	li
-		padding 7px
-		border-left 5px solid rgba(0, 0, 0, 0)
-		transition all 0.3s
-		width 100%
-		&:hover
-			background rgba(0, 0, 0, 0.27)
-			width 100%
-			border-left 5px solid rgba(66, 66, 66, 0.64)
-		&.selected
-			border-left 5px solid #7C7C7C !important
-			transition all 0.3s
+	.menu-base 
+		list-style: none;
+		color: #FFF;
+		font-family: 'Roboto', sans-serif;
+		font-size: 30px;
+		font-weight: 400;
+		margin: 10px 0;
 
+
+.menu-base li, .sub-menu li, .sub-menu div 
+	cursor: pointer;
+
+
+.menu-base a, .sub-menu a 
+	color: #fff;
+	text-decoration: none;
+
+
+.menu .menu-base > li 
+	border-left: 5px solid rgba(0, 0, 0, 0);
+	padding: 15px 10px;
+	transition: all 0.3s;
+
+
+.menu .menu-base > li:hover 
+	border-left: 5px solid rgba(55, 73, 207, 0.3);
+
+
+.menu .menu-base>li.selected 
+	border-left: 5px solid #3749CF;
+	transition: all 0.3s;
+
+
+.sub-menu 
+	z-index: 11;
+	height: 100%;
+	position: fixed;
+	background: #0C0C0C;
+	right: -230px;
+	width: 230px;
+	overflow: auto;
+	top: 0;
+	box-shadow: 6px 0px 14px 6px #000;
+
+
+	div 
+		padding: 10px;
+		transition: all 0.3s;
+		list-style: none;
+		color: #FFF;
+		font-family: 'Roboto', sans-serif;
+		font-size: 24px;
+		font-weight: 400;
+		margin: 0;
+		background: rgba(0, 0, 0, 0.98);
+		box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.95);
+		position: fixed;
+		width: 100%;
+
+
+.menu-genre 
+	padding: 10px 30px;
+	border-left: 5px solid rgba(0, 0, 0, 0);
+	transition: all 0.3s;
+	list-style: none;
+	color: #FFF;
+	font-family: 'Roboto', sans-serif;
+	font-size: 24px;
+	font-weight: 400;
+	margin: 45px 0 10px 0;
+
+
+	li 
+		padding: 7px;
+		border-left: 5px solid rgba(0, 0, 0, 0);
+		transition: all 0.3s;
+		width: 100%;
+
+
+	li:hover 
+		background: rgba(0, 0, 0, 0.27);
+		width: 100%;
+		border-left: 5px solid rgba(66, 66, 66, 0.64);
+
+
+	li.selected
+		border-left: 5px solid #7C7C7C !important;
+		transition: all 0.3s;
