Fix movie detail height

--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -56,7 +56,7 @@
 .movie-detail
     z-index 10
     width 100%
-    height calc(100% - 65px)
+    height 100%
     position absolute
     -webkit-user-select none
     opacity 1
