--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -5,26 +5,23 @@
     border-bottom: 1px solid rgba(0, 0, 0, .9)
 
 .title
-    color: #fff
     font-family: 'Roboto', sans-serif
     font-size: 150%
     font-weight: 400
     margin-left: 5%
     position: absolute
     margin-top: 6%
-    width: 60%
+    width: 70%
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
-
 
 .year
 	font-size: 110%
 	color #5b5b5b
 	margin-left: 5%
-	margin-top: 16%
+	margin-top: 7%
 	position: absolute
-
 
 .seasons
 	font-size 0.85em
@@ -35,17 +32,17 @@
 .popcorn-movie-open-icon
   position relative
   float right
-  margin-right 37px
-  margin-top 6%
+  margin-right 27px
+  margin-top 2%
 
 .popcorn-movie-seperator
-  width 1px
-  height 80%
-  float right
-  margin-top 15px
-  position relative
-  margin-right 30px
-  background-color #000
+	width 1px
+	height 50px
+	float right
+	margin-top 8px
+	position relative
+	margin-right 30px
+	background-color rgba(0, 0, 0, 0.34)
 
 
 
