--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -80,19 +80,23 @@
 
 
 .sperator-movie
-    opacity 1
-    height 5.5%
+    height 70px
     width 100%
-    position relative
-    -webkit-backface-visibility hidden
+    position absolute
+    z-index 3
+    top 28%
+    background rgba(0, 0, 0, 0.6)
 
     .detail-window
       opacity 1
 
 .movie-quick-info
-  margin-bottom: 5px
-  color: #fff
-  margin-left: 3%
+  margin-top -8px
+  color #FFF
+  margin-left 3%
+  z-index 4
+  position absolute
+  width 95%
 
   .movie-meta-details
     opacity 1
@@ -193,18 +197,22 @@
       transition all .5s
 
 .movie-meta-title
-    margin-top 5.5%
+    margin-top 31%
     margin-left 3%
     color #fff
     font-family: 'Open Sans Semibold'
     -webkit-font-smoothing: antialiased;
-    font-size 38px
+    font-size 28px
     position relative
     cursor default
-    z-index 2
-    max-width 60%
+    z-index 3
+    max-width 95%
     opacity 1
     -webkit-backface-visibility hidden
+    text-shadow 0 0 5px #000
+    text-overflow ellipsis
+    white-space nowrap
+    overflow hidden
 
 .health-icon
     z-index 2
@@ -242,40 +250,32 @@
       background-image url('../images/icons/star.png')
 
 .movie-quality-container
-  padding-left: 10%
-  top: 13px
-  z-index: 2
-  float: left
-  width: 10px
-  height: 10px
-  position: relative
+  z-index 2
+  width 30%
+  margin 10px auto
 
 .movie-controlls-container
   margin-left: 3%
   margin-top: 10%
-  z-index: 2
-  width: 70%
+  z-index: 3
+  width: 90%
   height: 10px
   position: relative
 
-
-
 .movie-btn-watch
-    float left
-    z-index 2
+    z-index 3
     //left 29%
     //top 72%
-    position relative
+    margin auto
     cursor pointer
-    height 35px
-    -moz-border-radius 3px
-    -webkit-border-radius 3px
-    border-radius 3px
-    -moz-background-clip padding
+    width 60px
+    height 60px
+    -webkit-border-radius 50px
+    border-radius 50px
     -webkit-background-clip padding-box
     background-clip padding-box
     background-color #1F375F
-    padding 0 15px
+    padding 3px 0 0 18px
     transition background-color .5s
     &:hover
       background #225694
@@ -293,6 +293,13 @@
       text-align center
       padding-top 12px
       font-size 12px
+
+      .play-button
+        width 0
+        height 0
+        border-top 15px solid transparent
+        border-left 30px solid white
+        border-bottom 15px solid transparent
 
 .movie-btn-watch-trailer
     z-index 2
@@ -328,13 +335,12 @@
       padding-top 12px
       font-size 12px
 
-
 .movie-backdrop
     width 100%
-    height 100%
+    height 40%
     position absolute
     top 0px
-    z-index 0
+    z-index 3
     background-repeat no-repeat
     background-position center
     background-size cover
@@ -348,9 +354,7 @@
     height 100%
     position absolute
     top 0px
-    opacity 0.83
-    /* layer alpha */
-    background-color #000
+    background-color rgba(0, 0, 0, 0.95)
     /* layer fill content */
     z-index: 2
 
@@ -585,4 +589,3 @@
     background-image url('../images/flags/hungarian.png')
   &.zh
     background-image url('../images/flags/chinese.png')
-
