fix list and give more love to detail

--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -179,3 +179,40 @@
     background-image url("../images/SEARCHICON.png")
     background-size 60%
     background-position 50% 40%
+
+@media all and (min-width: 700px)
+    /* Styles for Tablet screen */
+    .filter-bar
+        height 8%
+    .popcorn-logo
+        margin-top 4%
+
+@media all and (min-width: 300px) and (max-width: 700px) and (orientation:landscape)
+    /* Styles for Landscape screen */
+
+    .filter-bar
+        height 16%
+
+    .popcorn-logo
+        margin-top 1.5%
+
+    .popcorn-menu-icon
+        width 10%
+        max-width 75px
+        margin-top 9px
+
+    .popcorn-search-icon
+        margin-top 10px
+
+@media all and (min-width: 700px) and (orientation:landscape)
+    /* Styles for Landscape screen */
+    .filter-bar
+        height 12%
+    .popcorn-logo
+        margin-top 2.5%
+
+    .popcorn-menu-icon
+        margin-top 17px
+
+    .popcorn-search-icon
+        margin-top 18px
