--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -1,27 +1,28 @@
 .movie-item
-    position: relative
-    width: 100%
-    height: 18%
-    border-bottom: 1px solid rgba(0, 0, 0, .9)
+	position: relative
+	width: 100%
+	height: 90px
+	border-bottom: 1px solid rgba(0, 0, 0, .9)
 
 .title
-    font-family: 'Roboto', sans-serif
-    font-size: 150%
-    font-weight: 400
-    margin-left: 5%
-    position: absolute
-    margin-top: 6%
-    width: 70%
-    white-space: nowrap
-    overflow: hidden
-    text-overflow: ellipsis
+	color #fff
+	font-family 'Roboto', sans-serif
+	font-size 150%
+	font-weight 400
+	margin-left 5%
+	position absolute
+	margin-top 4%
+	width 70%
+	white-space nowrap
+	overflow hidden
+	text-overflow ellipsis
 
 .year
-	font-size: 110%
+	font-size 110%
 	color #5b5b5b
-	margin-left: 5%
-	margin-top: 7%
-	position: absolute
+	margin-left 5%
+	margin-top 60px
+	position absolute
 
 .seasons
 	font-size 0.85em
@@ -30,19 +31,19 @@
 	float right
 
 .popcorn-movie-open-icon
-  position relative
-  float right
-  margin-right 27px
-  margin-top 2%
+	position relative
+	float right
+	margin-right 27px
+	margin-top 21px
 
 .popcorn-movie-seperator
 	width 1px
-	height 50px
+	height 75px
 	float right
 	margin-top 8px
 	position relative
 	margin-right 30px
-	background-color rgba(0, 0, 0, 0.34)
+	background-color rgba(255, 255, 255, 0.2)
 
 
 
@@ -165,3 +166,15 @@
 
 		&:hover
 			background-color:#1b4365
+
+
+@media all and (min-width: 300px) and (max-width: 700px) and (orientation:landscape)
+	/* Styles for Landscape screen */
+	.year
+		font-size 110%
+
+@media all and (min-width: 500px)
+	/* Styles for Tablet screen */
+	.title
+		font-size 160%
+		margin-top 2%
