--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -1,36 +1,42 @@
 .movie-list
-    height: 100%
-    width: 100%
-    fixed: top left
-    text-align: center
+    height 100%
+    width 100%
+    fixed top left
+    text-align center
 
     scrollable()
 
     &::-webkit-scrollbar-track
-        margin-top: 15%
+        margin-top 15%
 
     .movies
-        padding-top: 27%
-        -webkit-user-select: none
-        text-align: left
-        width: 100%
-        height: 100%
-        display: inline-block
+        padding-top 100px
+        -webkit-user-select none
+        text-align left
+        width 100%
+        height 100%
+        display inline-block
 
     .error
-        font-size: 1.5em;
-        text-align: center;
-        margin-top: 180px;
-        color: #727272;
-        font-weight: bold;
+        font-size 1.5em
+        text-align center
+        margin-top 180px
+        color #727272
+        font-weight bold
 
     > .spinner
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5) center center no-repeat;
+        position absolute
+        width 100%
+        height 100%
+        background rgba(0, 0, 0, 0.5) center center no-repeat
         
 
         .loading-container
-            margin: 180px auto 0px
-            opacity: .8;
+            margin 180px auto 0px
+            opacity .8
+
+@media all and (min-width: 300px) and (max-width: 700px) and (orientation:landscape)
+    /* Styles for Landscape screen */
+    .movie-list
+        .movies
+            padding-top 60px
