--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -57,7 +57,7 @@
     z-index 10
     width 100%
     height 100%
-    position absolute
+    position fixed
     -webkit-user-select none
     opacity 1
     overflow hidden
@@ -84,7 +84,7 @@
     width 100%
     position absolute
     z-index 3
-    top 28%
+    top 29%
     background rgba(0, 0, 0, 0.6)
 
     .detail-window
@@ -112,18 +112,6 @@
     z-index 2
     -webkit-backface-visibility hidden
 
-  .movie-imdb-link
-    margin-left 4px
-    margin-top 18px
-    width 27px
-    height 16px
-    opacity 1
-    position relative
-    float left
-    cursor pointer
-    z-index 2
-    background url(../images/icons/imdb.png) no-repeat
-
   .movie-dot
     margin-left 15px
     margin-right 15px
@@ -144,18 +132,18 @@
     opacity 1
     -webkit-backface-visibility hidden
 
-
-  .movie-cover-image
-    position relative
-    width 23%
-    border-radius 4px
-    //max-height 70%
-    float left
-    margin-right 20px
-    margin-left 7.1%
-    z-index 2
-    opacity 1
-    -webkit-backface-visibility hidden
+.movie-cover-image
+  position relative
+  width 23%
+  border-radius 4px
+  //max-height 70%
+  float left
+  margin-right 20px
+  margin-left 7.1%
+  z-index 2
+  opacity 1
+  -webkit-backface-visibility hidden
+  display none
 
 .movie-overview-container
   top: 22%
@@ -163,20 +151,23 @@
   width: 92%
 
 .movie-meta-overview
-    position relative
-    margin-left 3%
-    margin-top 45px
-    color #fff
-    font-family 'Open Sans Semibold'
-    -webkit-font-smoothing: antialiased
-    font-size 14px
-    line-height 22px
-    //width 60%
-    //max-width 60%
-    //height 55%
-    z-index 2
-    opacity 1
-    -webkit-backface-visibility hidden
+  position absolute
+  margin-left 3%
+  margin-top 45px
+  color #fff
+  font-family 'Open Sans Semibold'
+  -webkit-font-smoothing: antialiased
+  font-size 14px
+  line-height 22px
+  //width 60%
+  //max-width 60%
+  //height 55%
+  z-index 2
+  opacity 1
+  height calc(40% - 10px)
+  -webkit-backface-visibility hidden
+  overflow auto
+  scrollable()
 
 .movie-detail-close
 	top 15px
@@ -197,7 +188,7 @@
       transition all .5s
 
 .movie-meta-title
-    margin-top 31%
+    margin-top 38%
     margin-left 3%
     color #fff
     font-family: 'Open Sans Semibold'
@@ -277,9 +268,11 @@
     background-color #1F375F
     padding 3px 0 0 18px
     transition background-color .5s
+    opacity 0.9
     &:hover
       background #225694
       text-decoration none
+      opacity 1
 
     &:active
       box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6)
@@ -589,3 +582,32 @@
     background-image url('../images/flags/hungarian.png')
   &.zh
     background-image url('../images/flags/chinese.png')
+
+
+
+@media all and (min-width: 300px) and (max-width: 700px) and (orientation:landscape)
+    /* Styles for Landscape screen */
+  .movie-controlls-container
+    margin-left: 3%
+
+@media all and (min-width: 500px)
+  /* Styles for Tablet screen */
+  .movie-detail
+    top 8%
+  .sperator-movie
+    height 100px
+    top 32.2%
+  .movie-meta-title
+    margin-top 41%
+    font-size 40px
+
+  .movie-quick-info
+    margin-top 0
+
+    .movie-meta-details
+      font-size 13px
+
+    .movie-cover-image
+      display block
+  .movie-overview-container
+    margin-top 7%
