Removed calc in styl

--- a/frontend/www/styl/player.styl
+++ b/frontend/www/styl/player.styl
@@ -28,7 +28,7 @@
         -webkit-backface-visibility hidden
 
         position: relative
-        top: calc(50% - 87.5px)
+        top: 50%
 
         .value
             color #fff
