--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -164,7 +164,7 @@
   //height 55%
   z-index 2
   opacity 1
-  height calc(40% - 10px)
+  height 40%
   -webkit-backface-visibility hidden
   overflow auto
   scrollable()
