add landscape view on details
now wait for comments :p

--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -7,11 +7,11 @@
 .title
 	color #fff
 	font-family 'Roboto', sans-serif
-	font-size 150%
+	font-size 170%
 	font-weight 400
 	margin-left 5%
 	position absolute
-	margin-top 4%
+	margin-top 20px
 	width 70%
 	white-space nowrap
 	overflow hidden
@@ -176,5 +176,5 @@
 @media all and (min-width: 500px)
 	/* Styles for Tablet screen */
 	.title
-		font-size 160%
-		margin-top 2%
+		font-size 180%
+		margin-top 15px
