--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -133,14 +133,13 @@
     -webkit-backface-visibility hidden
 
 .movie-cover-image
-  position relative
-  width 23%
+  position absolute
+  width 15%
+  -webkit-border-radius 4px
   border-radius 4px
-  //max-height 70%
-  float left
-  margin-right 20px
+  top 20px
   margin-left 7.1%
-  z-index 2
+  z-index 4
   opacity 1
   -webkit-backface-visibility hidden
   display none
@@ -351,7 +350,77 @@
     /* layer fill content */
     z-index: 2
 
+@media screen and (max-width: 700px) and (orientation:landscape)
+    .movie-controlls-container
+      margin-left: 3%
 
+    .movie-detail
+      top 16%
+
+    .movie-btn-watch
+      margin-top -40px
+
+    .sperator-movie
+      height 70px
+      top 22%
+
+    .movie-meta-title
+      margin-top 9%
+      font-size 30px
+
+    .movie-overview-container
+      margin-top 0
+
+@media screen and (min-width: 600px) and (orientation:portrait)
+    /* Styles for Tablet screen */
+    .movie-detail
+      top 8%
+
+    .sperator-movie
+      height 100px
+      top 32.2%
+
+    .movie-meta-title
+      margin-top 41%
+      font-size 40px
+
+    .movie-quick-info
+      margin-top 0
+
+    .movie-meta-details
+      font-size 13px
+
+    .movie-cover-image
+      display block
+      width 25%
+
+    .movie-overview-container
+      margin-top 2%
+
+@media all and (min-width: 700px) and (orientation:landscape)
+    /* Styles for Landscape screen */
+    .movie-detail
+      top 12%
+
+    .movie-meta-title
+      margin-top 8%
+      margin-left 25%
+      font-size 40px
+
+    .sperator-movie
+      height 100px
+      top 27.5%
+
+    .movie-quick-info
+      margin-top -7px
+      margin-left 25%
+      width 75%
+
+    .movie-overview-container
+      margin-top 0
+
+    .movie-cover-image
+      display block
 
 .q720
   z-index 2
@@ -582,32 +651,3 @@
     background-image url('../images/flags/hungarian.png')
   &.zh
     background-image url('../images/flags/chinese.png')
-
-
-
-@media all and (min-width: 300px) and (max-width: 700px) and (orientation:landscape)
-    /* Styles for Landscape screen */
-  .movie-controlls-container
-    margin-left: 3%
-
-@media all and (min-width: 500px)
-  /* Styles for Tablet screen */
-  .movie-detail
-    top 8%
-  .sperator-movie
-    height 100px
-    top 32.2%
-  .movie-meta-title
-    margin-top 41%
-    font-size 40px
-
-  .movie-quick-info
-    margin-top 0
-
-    .movie-meta-details
-      font-size 13px
-
-    .movie-cover-image
-      display block
-  .movie-overview-container
-    margin-top 7%
