put description text bigger for tablets

--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -397,6 +397,10 @@
     .movie-overview-container
       margin-top 2%
 
+    .movie-meta-overview
+      margin-top 60px
+      font-size 17px
+
 @media all and (min-width: 700px) and (orientation:landscape)
     /* Styles for Landscape screen */
     .movie-detail
@@ -418,6 +422,10 @@
 
     .movie-overview-container
       margin-top 0
+
+    .movie-meta-overview
+      margin-top 60px
+      font-size 17px
 
     .movie-cover-image
       display block
