--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -8,8 +8,19 @@
 
 .filter-bar
     position absolute
-    height 15%
-    box-shadow 0px 6px 8px -4px rgba(0, 0, 0, .9)
+
+    .bar 
+        background: #17181b;
+        border-bottom: #266fdc;
+        box-shadow: 0px -2px 0px #222222 inset, 0px 3px 3px rgba(0, 0, 0, 0.07)
+
+    h1 
+        color: #ffffff;
+      
+    .icon 
+        padding-left: 10px
+        padding-right: 10px
+
 
     .source
         box-sizing content-box
