Quick fix to visual and force query version

--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -9,7 +9,7 @@
 		font-family 'Roboto', sans-serif
 		font-size 170%
 		font-weight 400
-		margin-left 5%
+		margin-left 5px;
 		position absolute
 		margin-top 20px
 		width 70%
@@ -20,7 +20,7 @@
 	.year
 		font-size 110%
 		color #5b5b5b
-		margin-left 5%
+		margin-left 20px
 		margin-top 60px
 		position absolute
 
