--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -1,157 +1,17 @@
-.filter-bar,
-#header
+.filter-bar
     z-index 10
     width 100%
+    height 100%
     opacity .97
-    background-color #17181b
+    background #17181b
+    border-bottom #266fdc
+    box-shadow 0px -2px 0px #222222 inset, 0px 3px 3px rgba(0, 0, 0, 0.07)
     -webkit-user-select none
 
-.filter-bar
-    position absolute
-
-    .bar 
-        background: #17181b;
-        border-bottom: #266fdc;
-        box-shadow: 0px -2px 0px #222222 inset, 0px 3px 3px rgba(0, 0, 0, 0.07)
-
-    h1 
-        color: #ffffff;
-      
-    .icon 
-        padding-left: 10px
-        padding-right: 10px
-
-
-    .source
-        box-sizing content-box
-        -webkit-app-region no-drag
-        color #c3c5c7
-        text-align center
-        cursor pointer
-        height 20px
-        padding 10px 15px 0 18px
-
-        &:hover
-            color white
-
-        &.active
-            border-bottom 4px solid #2d75df
-
-    .nav.filters
-        float left
-        margin-left 10px
-
-    .filter
-        padding 10px 0 0
-        margin-left 20px
-
-        & > a
-            -webkit-app-region no-drag
-            display inline-block
-            padding 0
-            color #c3c5c7
-            background-color transparent !important
-
-            &:hover
-                color white
-        .value
-            color #2d75df
-            padding-left 10px
-
-        .dropdown-menu
-            font-size 0.9em
-            -webkit-app-region no-drag
-            scrollable()
-            max-height 500px
-            margin-top 11px
-            border-top-left-radius 0
-            border-top-right-radius 0
-
-    button
-        -webkit-app-region no-drag
-        background center no-repeat
-        transition background-image 0.5s
-        width 18px
-        height 18px
-        margin 10px 5px 0
-
-        &.settings
-            margin-right 10px
-            background-image url(../images/icons/settings.png)
-
-            &:hover
-                background-image url(../images/icons/settings_hover.png)
-
-        &.about
-            background-image url(../images/icons/info.png)
-
-            &:hover
-                background-image url(../images/icons/info_hover.png)
-
-        &.queue
-            background-image url(../images/icons/queue.png)
-
-            &:hover
-                background-image url(../images/icons/queue_hover.png)
-
-        &.favorites
-            background-image url(../images/icons/favorites.png)
-
-            &:hover
-                background-image url(../images/icons/favorites_hover.png)
-
-        &.triggerUpdate
-            background-image url(../images/icons/TriggerUpdate.png)
-
-            &:hover
-                background-image url(../images/icons/TriggerUpdate_hover.png)
-
-    .search input
-        line-height normal
-        -webkit-app-region no-drag
-        outline none
-        cursor pointer
-        width 0px
-        height 18px
-        position relative
-        background url("../images/icons/search.png") #17181b no-repeat right center
-        background-position right 3px center
-        border solid 0px
-        margin 8px 3px 0
-        padding 1px 2px 3px
-        padding-left 21px
-        border-radius 10em
-        transition width 0.5s
-        -webkit-appearance textfield
-        -webkit-box-sizing content-box
-        color rgba(196, 198, 200, 0.47)
-
-        &:hover
-            background url('../images/icons/search_hover.png') no-repeat right center
-            background-position right 3px center
-            background-color rgba(14, 14, 15, 1)
-            color white
-            width 80px
-            
-        &:focus
-            background #ededed url('../images/icons/search_hover.png') no-repeat right center
-            background-position right 3px center
-            padding-left 10px
-            width 130px
-            color #c4c6c8
-            background-color #0e0e0f
-            cursor auto
-
-        &::-moz-placeholder,
-        &::-webkit-input-placeholder
-            color transparent
-
-        &:focus::-webkit-input-placeholder
-            color #c4c6c8
-    
-    .icon_menu
-        width 36px
-        margin 0 10px
+.filter-bar-region
+    height: 7%
+    position: absolute
+    width: 100%
 
 
 .popcorn-logo
@@ -194,36 +54,6 @@
 @media all and (min-width: 700px)
     /* Styles for Tablet screen */
     .filter-bar
-        height 8%
+        height 18%
     .popcorn-logo
         margin-top 4%
-
-@media all and (min-width: 300px) and (max-width: 700px) and (orientation:landscape)
-    /* Styles for Landscape screen */
-
-    .filter-bar
-        height 16%
-
-    .popcorn-logo
-        margin-top 1.5%
-
-    .popcorn-menu-icon
-        width 10%
-        max-width 75px
-        margin-top 9px
-
-    .popcorn-search-icon
-        margin-top 10px
-
-@media all and (min-width: 700px) and (orientation:landscape)
-    /* Styles for Landscape screen */
-    .filter-bar
-        height 12%
-    .popcorn-logo
-        margin-top 2.5%
-
-    .popcorn-menu-icon
-        margin-top 17px
-
-    .popcorn-search-icon
-        margin-top 18px
