--- a/frontend/www/styl/filter_bar.styl
+++ b/frontend/www/styl/filter_bar.styl
@@ -29,15 +29,12 @@
 .popcorn-menu-icon
     position relative
     width 17%
-    max-width 75px
-    margin-top 26px
-    height 50px
     float right
-    background-repeat no-repeat
+    width: 8%
+    margin-right: 2%
+    margin-top: 2%
     cursor pointer
-    background-image url("../images/MENUICON.png")
-    background-size 60%
-    background-position 50% 40%
+
 
 .popcorn-search-icon
     position relative
