movie list, menu & filter bar styling

--- a/frontend/www/styl/menu.styl
+++ b/frontend/www/styl/menu.styl
@@ -12,8 +12,9 @@
 	height: 100%;
 	position: fixed;
 	background: #17181B;
-	right: -270px;
-	width: 270px;
+	right: -70%;
+	width: 70%;
+	min-width: 270px;
 	overflow: auto;
 	top: 0;
 	box-shadow: 6px 0px 14px 6px #000;
@@ -41,6 +42,8 @@
 	border-left: 5px solid rgba(0, 0, 0, 0);
 	padding: 15px 10px;
 	transition: all 0.3s;
+	margin-left: 2%;
+	border-bottom: 1px solid #474747
 
 
 .menu .menu-base > li:hover 
@@ -57,8 +60,9 @@
 	height: 100%;
 	position: fixed;
 	background: #0C0C0C;
-	right: -230px;
-	width: 230px;
+	right: -60%;
+	width: 60%;
+	min-width: 230px;
 	overflow: auto;
 	top: 0;
 	box-shadow: 6px 0px 14px 6px #000;
