--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -7,10 +7,10 @@
     scrollable()
 
     &::-webkit-scrollbar-track
-        margin-top 15%
+        margin-top 7%
 
     .movies
-        padding-top 50px
+        padding-top 13%
         -webkit-user-select none
         text-align left
         width 100%
