--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -11,7 +11,7 @@
 		font-weight 400
 		margin-left 5px;
 		position absolute
-		margin-top 20px
+		margin-top 1%
 		width 70%
 		white-space nowrap
 		overflow hidden
