--- a/frontend/www/styl/menu.styl
+++ b/frontend/www/styl/menu.styl
@@ -1,10 +1,11 @@
 .menu-overlay
-	position: absolute;
+	position: fixed;
 	background: rgba(0, 0, 0, 0.3);
 	width: 100%;
 	height: 100%;
 	transition: all 0.3s;
-	display: none;
+	z-index: 9;
+
 
 
 .menu 
