--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -241,8 +241,8 @@
 
 .movie-quality-container
   z-index 2
-  width 30%
-  margin 10px auto
+  width: 80px
+  height: 12px
 
 .movie-controlls-container
   margin-left: 3%
