--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -346,7 +346,7 @@
     height 100%
     position absolute
     top 0px
-    background-color rgba(0, 0, 0, 0.95)
+    background-color #121314
     /* layer fill content */
     z-index: 2
 
