--- a/frontend-html/css/movie-detail.css
+++ b/frontend-html/css/movie-detail.css
@@ -1,82 +1,72 @@
-.popcorn-movie-detail {
-    position: absolute;
+.window {
     width: 100%;
-    height: calc(100% - 100px);
+    height: 100%;
+    background-color: #121314;
 }
-.popcorn-movie-detail-title {
+.movie-backdrop {
     position: relative;
-    margin-left: 40px;
-    margin-top: 30px;
-    color: #fff;
-    /* text color */
-    font-family: 'Roboto', sans-serif;
-    font-size: 36px;
-    font-weight: 400;
-    width: auto;
-    float: none;
-}
-.popcorn-movie-detail-meta {
-    margin-left: 20px;
-    margin-top: 18px;
-    color: #5b5b5b;
-    /* text color */
-    font-family: 'Roboto', sans-serif;
-    font-size: 24px;
-    font-weight: 400;
-    width: auto;
-    float: left;
-}
-.popcorn-movie-detail-star-container {
-    margin-top: 20px;
-    margin-left: 40px;
-    height: 27px;
-    width: auto;
-    float: left;
-}
-.popcorn-movie-detail-star {
-    margin-right: 5px;
-    width: 29px;
-    height: 27px;
-    float: left;
-    position: relative;
+    width: 100%;
+    height: 40%;
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('http://zapp.trakt.us/images/fanart_movies/223222-940.jpg?2');
+    -webkit-backface-visibility: hidden;
 }
-.popcorn-movie-detail-star.gold {
-    background-image: url('../assets/star-gold.png')
-}
-.popcorn-movie-detail-star.gray {
-    background-image: url('../assets/star-gray.png')
-}
-.movie-btn-watch {
-    width: 180px;
-    z-index: 2;
-    margin-top: 90px;
-    margin-left: 40px;
-    position: relative;
-    cursor: pointer;
-    height: 59px;
-    -webkit-border-radius: 3px;
-    -webkit-background-clip: padding;
-    background-clip: padding-box;
-    background-color: #1f375f;
-    padding: 0 15px;
-    -webkit-transition: background-color 0.5s;
-}
-.movie-btn-watch:hover {
-    background: #225694;
-    text-decoration: none;
-}
-.movie-btn-watch:active {
-    -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    background: #2875e5;
-    border: solid 1px #2468cc;
-}
-.movie-btn-watch .movie-watch-now {
-    color: #fff;
+.movie-meta-backround {
+    height: 25%;
+    width: 100%;
+    bottom: 0;
     position: absolute;
-    width: auto;
-    float: none;
-    margin-top: 20px;
-    margin-left: 50px
+    background: rgba(0, 0, 0, 0.6);
+}
+.movie-meta-container {
+    height: 100%;
+    width: calc(100%-3%);
+    padding-left: 3%;
+}
+.movie-meta-title {
+    top: 10%;
+    color: #fff;
+    font-family: 'Open Sans Semibold';
+    -webkit-font-smoothing: antialiased;
+    font-size: 28px;
+    position: relative;
+    cursor: default;
+    z-index: 3;
+    max-width: 75%;
+    opacity: 1;
+    -webkit-backface-visibility: hidden;
+    text-shadow: 0 0 5px #000;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.movie-meta-details {
+    opacity: 1;
+    margin-top: 2%;
+    position: relative;
+    float: left;
+    color: #fff;
+    font-family: 'Open Sans Bold';
+    -webkit-font-smoothing: antialiased;
+    font-size: 11px;
+    cursor: default;
+    z-index: 2;
+    -webkit-backface-visibility: hidden;
+}
+.movie-meta-dot {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 25px;
+    position: relative;
+    float: left;
+    width: 3px;
+    height: 3px;
+    border-radius: 2px;
+    background-clip: padding-box;
+    background-color: #dbdbdd;
+    cursor: default;
+    z-index: 2;
+    -webkit-backface-visibility: hidden;
 }
