--- a/frontend-html/css/movie-detail.css
+++ b/frontend-html/css/movie-detail.css
@@ -42,9 +42,11 @@
     white-space: nowrap;
     overflow: hidden;
 }
+.movie-details-container {
+    margin-top: 2%;
+}
 .movie-meta-details {
     opacity: 1;
-    margin-top: 2%;
     position: relative;
     float: left;
     color: #fff;
@@ -58,7 +60,6 @@
 .movie-meta-dot {
     margin-left: 15px;
     margin-right: 15px;
-    margin-top: 25px;
     position: relative;
     float: left;
     width: 3px;
@@ -69,4 +70,29 @@
     cursor: default;
     z-index: 2;
     -webkit-backface-visibility: hidden;
+}
+.movie-btn-watch .play-icon {
+    width: 0;
+    height: 0;
+    margin-top: 13px;
+    margin-left: 10px;
+    margin-right: auto;
+    border-top: 15px solid transparent;
+    border-left: 30px solid #fff;
+    border-bottom: 15px solid transparent;
+}
+.movie-btn-watch {
+    top: 35%;
+    position: relative;
+    z-index: 3;
+    margin: auto;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    background-clip: padding-box;
+    background-color: #1f375f;
+    padding: 3px 0 0 18px;
+    transition: background-color 0.5s;
+    opacity: 0.9;
 }
