--- a/frontend-html/css/movie-detail.css
+++ b/frontend-html/css/movie-detail.css
@@ -96,3 +96,47 @@
     transition: background-color 0.5s;
     opacity: 0.9;
 }
+.movie-btn-watch:hover {
+  background: #225694;
+}
+.movie-btn-watch:active {
+  box-shadow: inset 0 -1px 4px rgba(0,0,0,0.6);
+  background: #2875e5;
+  border: solid 1px #2468cc;
+}
+.health-icon {
+z-index: 2;
+margin-right: 6%;
+position: relative;
+float: right;
+width: 14px;
+height: 19px;
+opacity: 1;
+-webkit-backface-visibility: hidden;
+}
+
+.health-icon.Excellent {
+background-image: url("../assets/HealthExcellent.png");
+}
+
+.star-container {
+position: relative;
+float: left;
+height: 16px;
+z-index: 2;
+}
+
+.rating-star.full {
+background-image: url("../assets/star.png");
+}
+.rating-star {
+z-index: 2;
+float: right;
+margin-right: 5px;
+position: relative;
+width: 11px;
+height: 11px;
+opacity: 1;
+background-repeat: no-repeat;
+-webkit-backface-visibility: hidden;
+}
