--- a/frontend-html/css/movie-detail.css
+++ b/frontend-html/css/movie-detail.css
@@ -15,16 +15,13 @@
 }
 .movie-meta-backround {
     height: 25%;
-    width: 100%;
+    width: calc(100% - 2%);
     bottom: 0;
     position: absolute;
+    padding-left: 2%;
     background: rgba(0, 0, 0, 0.6);
 }
-.movie-meta-container {
-    height: 100%;
-    width: calc(100%-3%);
-    padding-left: 3%;
-}
+
 .movie-meta-title {
     margin-top: 1%;
     color: #fff;
@@ -146,8 +143,8 @@ background-repeat: no-repeat;
 
 .movie-meta-overview {
 position: absolute;
-margin-left: 3%;
-margin-right: 3%;
+margin-left: 2%;
+margin-right: 2%;
 margin-top: 10px;
 color: #fff;
 font-family: 'Open Sans Semibold';
