--- a/frontend/www/styl/movie_detail.styl
+++ b/frontend/www/styl/movie_detail.styl
@@ -23,6 +23,7 @@
   position relative
   width 100%
   height 40%
+  min-height 206px
   background-repeat no-repeat
   background-position center
   background-size cover
