work on getting the margin-top value just right

--- a/frontend/www/styl/ratchet-android.styl
+++ b/frontend/www/styl/ratchet-android.styl
@@ -13,3 +13,19 @@ header
 a
   &:hover
     text-decoration none
+
+
+.segmented-control 
+  display none
+  position fixed
+  
+  .control-item
+    background #232323
+    color #666666
+    border-left 1px solid #444444
+    &.active
+      background-color #232323
+      border-bottom 1px solid #266fdc
+      color #ffffff
+      font-weight 500
+
