--- a/frontend/www/styl/movie_browser/movie_list.styl
+++ b/frontend/www/styl/movie_browser/movie_list.styl
@@ -1,3 +1,11 @@
+.movie-browser
+    height 100%
+    width 100%
+
+.movie-list-region
+    height 100%
+    width 100%
+    
 .movie-list
     height 100%
     width 100%
@@ -10,7 +18,7 @@
         margin-top 7%
 
     .movies
-        padding-top 13%
+        //padding-top 13%
         -webkit-user-select none
         text-align left
         width 100%
