--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -5,7 +5,7 @@
   font-size 0.8em
   border-radius 5px
   background-clip padding-box
-  background-color #23252b
+  //background-color #23252b
 
 .movie-item-cover
   background-image url("../images/posterholder.png")
