Styling the main view

--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -1,17 +1,25 @@
 .movie-item
   display inline-block
-  margin 5px
+  margin 4px
   float left
   font-size 0.8em
   border-radius 5px
-  background-clip padding-box
-  //background-color #23252b
+
+
+.movie-meta-detail
+  background-color: #23252b
+  padding-top: 5px
+  margin-top: -4px
+  padding-bottom: 5px
+  border-bottom-left-radius: 5px
+  border-bottom-right-radius: 5px
+
 
 .movie-item-cover
   background-image url("../images/posterholder.png")
-  background-size 150px 225px
-  width 150px
-  height 225px
+  background-size 119px 178.5px
+  width 119px
+  height 178.5px
   border-radius 4px
   cursor pointer
   box-shadow 0 4px 11px rgba(0, 0, 0, .2), inset 0 3px 0 rgba(255, 255, 255, .12)
@@ -19,22 +27,23 @@
 
 .movie-item-meta-title
   height 22px
-  margin-top 6px
+  margin-top 3px
   margin-left 10px
   color #fff
-  max-width 134px
+  max-width 100px
   overflow hidden
   text-overflow ellipsis
   white-space nowrap
   font-family 'Roboto', sans-serif
   font-weight 400
-  font-size 19px
+  font-size 15px
 
 .movie-item-meta-year
   opacity 0.3
   height 22px
   margin-left 10px
-  margin-bottom 3px
+  margin-top: 2px
+  margin-bottom: -8px
   color #fff
   max-width 134px
   overflow hidden
