--- a/frontend/www/styl/ratchet-android.styl
+++ b/frontend/www/styl/ratchet-android.styl
@@ -1,5 +1,5 @@
 .bar
-  background #17181b
+  background rgba(23, 24, 27, 0.95)
   border-bottom #266fdc
   box-shadow 0px -2px 0px #222222 inset, 0px 3px 3px rgba(0, 0, 0, 0.07)
   h1
