--- a/frontend/www/styl/movie_browser/movie_item.styl
+++ b/frontend/www/styl/movie_browser/movie_item.styl
@@ -11,8 +11,8 @@
   padding-top: 5px
   margin-top: -4px
   padding-bottom: 5px
-  border-bottom-left-radius: 5px
-  border-bottom-right-radius: 5px
+  //border-bottom-left-radius: 5px
+  //border-bottom-right-radius: 5px
 
 
 .movie-item-cover
@@ -20,7 +20,7 @@
   background-size 110px 165px
   width 110px
   height 165px
-  border-radius 4px
+  //border-radius 4px
   cursor pointer
   box-shadow 0 4px 11px rgba(0, 0, 0, .2), inset 0 3px 0 rgba(255, 255, 255, .12)
   transition opacity 0.5s ease
